--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,38 +8,69 @@
 .kivikoski-says-hello-👋 {
   color: #101010;
   font: 1.2em/1.5 'Merriweather', serif;
-  padding: 2em;
+  padding: 1em;
 }
 
   .who-are-you-🐛 {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 2em;
-    font-weight: 600;
-    margin: 1em 0;
+
   }
-    .who-are-you-🐛__say-hi {}
+    .who-are-you-🐛__say-hi {
+      border-bottom: 1px solid #ccc;
+      font-family: 'Montserrat', sans-serif;
+      font-size: 1.5em;
+      padding-bottom: 0.5em;
+      margin: 0.5em 0 1em;
+    }
     .who-are-you-🐛__your-name-please {
-      display: block;
+      font-weight: 600;
     }
 
+
+
   .quick-summary-🎉 {
-    background: #eee;
+    background: rgb(253,253,253);
+    background: radial-gradient(circle, rgba(253,253,253,1) 0%, rgba(251,251,251,1) 100%);
+    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+    display: grid;
+    grid-template-columns: 33% 66%;
     margin-left: -2em;
     margin-right: -2em;
     margin-bottom: 2em;
-    padding: 2em;
+    padding: 2em 2em 0;
+    position: relative;
   }
+
+    .quick-summary-🎉 ::before {
+      width: 0;
+      height: 0;
+      border-left: 20px solid transparent;
+      border-right: 20px solid transparent;
+      border-top: 20px solid #8c12e2;
+      content: '';
+
+      position: absolute;
+      top: 0;
+      left: 50%;
+    }
+
+    .quick-summary-🎉__content {
+      display: grid;
+      grid-template-columns: 50% 50%;
+      grid-column-gap: 10px;
+      max-width: 45em;
+    }
+
+      .quick-summary-🎉__headline {
+        grid-column: 1 / 3;
+        grid-row: 1;
+      }
+
+
 
   /* Notification callouts */
   .notification-📬 {
-    background: #999;
-    border: 10px solid #ccc;
-    color: #fff;
-    margin-top: -4em;
-    margin-left: -1.5em;
-    margin-bottom: 2em;
-    padding: 1em;
-    width: 90%;
+
   }
 
   /* Work setup */
@@ -80,7 +111,32 @@
     font-weight: 600;
     font-size: 2em;
     line-height: 1.2;
-    margin-bottom: 1.3em;
+    margin-top: 0;
+    margin-bottom: 1em;
+    max-width: 19em;
+  }
+
+    .headline--main-sub {
+      color: #757575;
+      font-family: 'Montserrat', sans-serif;
+      display: block;
+      font-weight: 400;
+      font-size: .5em;
+      letter-spacing: 0.05em;
+      text-transform: uppercase;
+    }
+
+  .headline--major {
+    font-size: 1.3em;
+    font-weight: 300;
+    line-height: 1.4;
+  }
+
+  .headline--minor {
+    color: #757575;
+    letter-spacing: 0.05em;
+    font-weight: 400;
+    margin: 0;
     text-transform: uppercase;
   }
 
@@ -90,9 +146,9 @@
     margin-bottom: 4em;
   }
 
-  h1, h2, h3, h4, h5, h6{
+ h3, h4, h5, h6{
     font-family: 'Montserrat', sans-serif;
-    font-weight: 300;
+    font-weight: 200;
     margin: 0;
   }
 
@@ -100,6 +156,19 @@
     text-transform: uppercase;
     font-weight: 600;
   }
+
+  p {
+    font-size: 0.9em;
+    line-height: 1.6;
+  }
+
+  a,
+  a:link,
+  a:visited
+  {
+    color: #8c12e2;
+  }
+
 
   ul {
     padding-left: 0;
