style articles section with category lists

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -153,6 +153,12 @@
         }
 
 
+  .articles-✏️ {}
+    .articles-✏️__categories {
+      margin-bottom: 2em;
+    }
+
+
 
   /* Typography */
   .headline--main {
