--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -86,52 +86,41 @@
   }
 
   .work-💻 {
-    background: rgb(140,18,226);
-    background: linear-gradient(180deg, rgba(140,18,226,1) 11%, rgba(133,18,226,1) 100%);
+    /* background: rgb(140,18,226);
+    background: linear-gradient(180deg, rgba(140,18,226,1) 11%, rgba(133,18,226,1) 100%); */
     margin-left: -2em;
     margin-right: -2em;
     margin-bottom: 2em;
     padding: 2em;
 
   }
-    .work-💻  .headline--minor {
-      color: #1B0227;
-    }
 
     .work-💻  .headline--major {
-      color: #1B0227;
       max-width: 46em;
     }
 
     .what-mike-likes-👨‍💻 {
-      border-top: 1px solid #5e1690;
-      display:grid;
-      grid-template-columns: 30% 30% 30%;
-      grid-gap: 5%;
       margin-top: 1em;
-      padding-top: 1.5em;
     }
 
       .what-mike-likes-👨‍💻__example {
-        background: #fff;
         font-size: 0.9em;
-        -webkit-box-shadow: 0px 0px 20px 0px rgba(104,14,173,1);
-        -moz-box-shadow: 0px 0px 20px 0px rgba(104,14,173,1);
-        box-shadow: 0px 0px 20px 0px rgba(104,14,173,1);
       }
          .what-mike-likes-👨‍💻__headline {
-           background: rgb(253,253,253);
-           background: radial-gradient(circle, rgba(253,253,253,1) 0%, rgba(251,251,251,1) 100%);
-           border-top: 10px solid #5e1690;
            border-bottom: 1px solid #ccc;
+           display: inline-block;
            font-weight: 400;
-           padding: 1em;
          }
+          .what-mike-likes-👨‍💻__headline--icon {}
 
         .what-mike-likes-👨‍💻__list {
-          padding: 1em;
-          text-align: center;
         }
+          .what-mike-likes-👨‍💻__item {
+            display: inline;
+          }
+            .what-mike-likes-👨‍💻__item:not(:last-child)::after{
+              content: ', ';
+            }
 
         .notification-📬 {
           border-left: 10px solid #5e1690;
