--- a/assets/sass/sections/header.scss
+++ b/assets/sass/sections/header.scss
@@ -1,5 +1,5 @@
 .kivikoski-says-hello-👋 {
   color: $neutral-900;
-  font: 1.2em/1.5 'Merriweather', serif;
+  font: 1.2em/1.5 $font-serif;
   padding: 1em;
 }
