--- a/assets/sass/variables/colors.scss
+++ b/assets/sass/variables/colors.scss
@@ -4,8 +4,10 @@
 // Purples
 $primary-100: #8c12e2; // triangle
 $primary-200: #5e1690; // notification border
+$primary-300: #7e09d0; // links
 
 
 // White, Gray, Black
+$neutral-300: #757575; // used for light gray sub headers
 $neutral-400: #ccc; //used for borders
 $neutral-900: #101010; //used for body copy
