--- a/assets/sass/import.scss
+++ b/assets/sass/import.scss
@@ -1,5 +1,7 @@
 /* Hi folks 👋 */
 
+@import 'mixins/media-queries.scss';
+
 @import 'variables/colors.scss';
 @import 'variables/typography.scss';
 
