--- a/assets/sass/sections/work.scss
+++ b/assets/sass/sections/work.scss
@@ -1,12 +1,4 @@
-.work-💻 {
-  /* background: rgb(140,18,226);
-  background: linear-gradient(180deg, rgba(140,18,226,1) 11%, rgba(133,18,226,1) 100%); */
-  margin-left: -2em;
-  margin-right: -2em;
-  margin-bottom: 2em;
-  padding: 2em;
-
-}
+.work-💻 {}
 
   .work-💻  .headline--major {
     max-width: 46em;
