--- a/assets/sass/mixins/media-queries.scss
+++ b/assets/sass/mixins/media-queries.scss
@@ -1,4 +1,5 @@
 $screen-small: 320px;
+$screen-medium: 700px;
 $screen-large: 1024px;
 
 @mixin media-query($media) {
@@ -6,7 +7,7 @@ $screen-large: 1024px;
     @media only screen and (max-width: $screen-small) { @content; }
   }
   @else if $media == screen-non-handhelds {
-    @media only screen and (min-width: $screen-small + 1) { @content; }
+    @media only screen and (min-width: $screen-medium + 1) { @content; }
   }
   @else if $media == screen-medium {
     @media only screen and (min-width: $screen-small + 1) and (max-width: $screen-large - 1) { @content; }
