--- a/assets/sass/sections/header.scss
+++ b/assets/sass/sections/header.scss
@@ -1,5 +1,12 @@
 .kivikoski-says-hello-👋 {
   color: $neutral-900;
-  font: 1.2em/1.5 $font-serif;
-  padding: 1em;
+  font: 1em/1.5 $font-serif;
+  margin: 0;
+  padding: 1em 1.75em 1em 1em;
+
+  @media screen and (min-width: 374px) {
+      font-size: 1.2em;
+      padding: 1em;
+  }
+
 }
