--- a/assets/sass/sections/summary.scss
+++ b/assets/sass/sections/summary.scss
@@ -2,24 +2,20 @@
   background: rgb(253,253,253);
   background: radial-gradient(circle, rgba(253,253,253,1) 0%, rgba(251,251,251,1) 100%);
   border-top: 1px solid $neutral-400;
-  display: grid;
-  grid-template-columns: 33% 66%;
-  margin-left: -2em;
-  margin-right: -2em;
-  margin-bottom: 0;
-  padding: 2em 2em 0;
+  border-bottom: 1px solid $neutral-400;
+  margin-left: -1em;
+  margin-right: -1em;
+  margin-bottom: 1em;
+  padding: 1em;
   position: relative;
-}
 
-  .headshot {
-    /* border: 1px solid $neutral-400; */
-    border-radius: 100%;
-    margin: 2em auto 0;
-    max-width: 400px;
-    width: 80%;
+  @include media-query(screen-non-handhelds) {
+    display: grid;
+    grid-template-columns: 33% 66%;
+
   }
 
-  .quick-summary-🎉 ::before {
+  &::before {
     width: 0;
     height: 0;
     border-left: 20px solid transparent;
@@ -29,17 +25,40 @@
 
     position: absolute;
     top: 0;
-    left: 50%;
+    left: calc(50% - 20px);
   }
+}
+
+  .headshot {
+    display: none;
+
+    @include media-query(screen-non-handhelds) {
+      display: block;
+    }
+  }
+    .headshot__avatar {
+      /* border: 1px solid $neutral-400; */
+      border-radius: 100%;
+      display: block;
+      margin: 2em auto 0;
+      max-width: 400px;
+      width: 80%;
+    }
+
+
 
   .quick-summary-🎉__content {
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-column-gap: 10px;
-    max-width: 45em;
+    @media screen and (min-width: 1034px ) {
+      display: grid;
+      grid-template-columns: 50% 50%;
+      grid-column-gap: 10px;
+      max-width: 45em;
+    }
   }
 
     .quick-summary-🎉__headline {
-      grid-column: 1 / 3;
-      grid-row: 1;
+      @include media-query(screen-non-handhelds) {
+        grid-column: 1 / 3;
+        grid-row: 1;
+      }
     }
