--- a/assets/sass/variables/typography.scss
+++ b/assets/sass/variables/typography.scss
@@ -21,6 +21,11 @@ h3, h4, h5, h6{
      color: $primary-300;
    }
 
+    .link--email {
+      display: block;
+      margin-top: 1em;
+    }
+
 
    ul {
      padding-left: 0;
