--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -99,7 +99,7 @@ ul li {
   @media only screen and (min-width: 701px) {
     .quick-summary-🎉 {
       display: grid;
-      grid-template-columns: 33% 66%; } }
+      grid-template-columns: 33% 16.5% 16.5% 16.5% 16.5%; } }
   .quick-summary-🎉::before {
     width: 0;
     height: 0;
@@ -115,27 +115,60 @@ ul li {
   display: none; }
   @media only screen and (min-width: 701px) {
     .headshot {
-      display: block; } }
+      display: block;
+      grid-column: 1;
+      grid-row: 1; } }
 
 .headshot__avatar {
   /* border: 1px solid $neutral-400; */
   border-radius: 100%;
   display: block;
   margin: 2em auto 0;
-  max-width: 400px;
-  width: 80%; }
-
-@media screen and (min-width: 1034px) {
-  .quick-summary-🎉__content {
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-column-gap: 10px;
-    max-width: 45em; } }
+  max-height: 295px;
+  max-width: 80%; }
 
 @media only screen and (min-width: 701px) {
   .quick-summary-🎉__headline {
-    grid-column: 1 / 3;
+    grid-column: 2 / 6;
     grid-row: 1; } }
+
+@media screen and (min-width: 701px) {
+  .quick-summary-🎉__content--first {
+    grid-column: 2/6; } }
+
+@media screen and (min-width: 872px) {
+  .quick-summary-🎉__content--first {
+    grid-column: 1 / 3;
+    grid-row: 2;
+    padding-right: 1em; } }
+
+@media screen and (min-width: 1100px) {
+  .quick-summary-🎉__content--first {
+    grid-column: 2 / 6; } }
+
+@media screen and (min-width: 1174px) {
+  .quick-summary-🎉__content--first {
+    grid-column: 2 / 4; } }
+
+@media screen and (min-width: 701px) {
+  .quick-summary-🎉__content--last {
+    grid-column: 2 / 6; } }
+
+@media screen and (min-width: 872px) {
+  .quick-summary-🎉__content--last {
+    grid-column: 3 / 6;
+    grid-row: 2;
+    padding-right: 1em; } }
+
+@media screen and (min-width: 1100px) {
+  .quick-summary-🎉__content--last {
+    grid-column: 2 / 6;
+    grid-row: 3; } }
+
+@media screen and (min-width: 1174px) {
+  .quick-summary-🎉__content--last {
+    grid-column: 4 / 6;
+    grid-row: 2; } }
 
 .work-💻 .headline--major {
   max-width: 46em; }
