--- a/assets/sass/sections/summary.scss
+++ b/assets/sass/sections/summary.scss
@@ -11,7 +11,7 @@
 
   @include media-query(screen-non-handhelds) {
     display: grid;
-    grid-template-columns: 33% 66%;
+    grid-template-columns: 33% 16.5% 16.5% 16.5% 16.5%;
 
   }
 
@@ -34,6 +34,8 @@
 
     @include media-query(screen-non-handhelds) {
       display: block;
+      grid-column: 1;
+      grid-row: 1;
     }
   }
     .headshot__avatar {
@@ -41,24 +43,53 @@
       border-radius: 100%;
       display: block;
       margin: 2em auto 0;
-      max-width: 400px;
-      width: 80%;
+      max-height: 295px;
+      max-width: 80%;
     }
 
-
-
-  .quick-summary-🎉__content {
-    @media screen and (min-width: 1034px ) {
-      display: grid;
-      grid-template-columns: 50% 50%;
-      grid-column-gap: 10px;
-      max-width: 45em;
-    }
-  }
 
     .quick-summary-🎉__headline {
       @include media-query(screen-non-handhelds) {
-        grid-column: 1 / 3;
+        grid-column: 2 / 6;
         grid-row: 1;
+      }
+    }
+
+    .quick-summary-🎉__content--first {
+      @media screen and (min-width: 701px){
+        grid-column: 2/6;
+      }
+      @media screen and (min-width: 872px){
+        grid-column: 1 / 3;
+        grid-row: 2;
+        padding-right: 1em;
+      }
+      @media screen and (min-width: 1100px){
+        grid-column: 2 / 6;
+      }
+
+      @media screen and (min-width: 1174px){
+        grid-column: 2 / 4;
+      }
+    }
+
+    .quick-summary-🎉__content--last {
+      @media screen and (min-width: 701px){
+        grid-column: 2 / 6;
+      }
+      @media screen and (min-width: 872px){
+        grid-column: 3 / 6;
+        grid-row: 2;
+        padding-right: 1em;
+      }
+
+      @media screen and (min-width: 1100px){
+        grid-column: 2 / 6;
+        grid-row: 3;
+      }
+
+      @media screen and (min-width: 1174px){
+        grid-column: 4 / 6;
+        grid-row: 2;
       }
     }
