design up to notification component

--- a/assets/sass/components/notification.scss
+++ b/assets/sass/components/notification.scss
@@ -1,4 +1,6 @@
 .notification-📬 {
+  background: radial-gradient(circle, #fdfdfd 0%, #fbfbfb 100%);
+  border: 1px solid $neutral-400;
   border-left: 10px solid $primary-200;
   background: #fff;
   margin-top: 2em;
