set email link to new line in summary

--- a/assets/sass/variables/typography.scss
+++ b/assets/sass/variables/typography.scss
@@ -1,5 +1,5 @@
-$font-serif: 'Merriweather', serif;
-$font-sans-serif: 'Montserrat', sans-serif;
+$font-serif: 'Merriweather', Georgia, "Times New Roman", serif;
+$font-sans-serif: 'Montserrat', Helvetica, Verdana, sans-serif;
 
 h3, h4, h5, h6{
    /* font-family: 'Montserrat', sans-serif;
