--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -35,7 +35,7 @@ ul li {
 
 .headline--main-sub {
   color: #757575;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Montserrat", Helvetica, Verdana, sans-serif;
   display: block;
   font-weight: 400;
   font-size: .5em;
@@ -51,13 +51,15 @@ ul li {
 
 .headline--minor {
   color: #757575;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Montserrat", Helvetica, Verdana, sans-serif;
   letter-spacing: 0.05em;
   font-weight: 400;
   margin: 0 0 1em;
   text-transform: uppercase; }
 
 .notification-📬 {
+  background: radial-gradient(circle, #fdfdfd 0%, #fbfbfb 100%);
+  border: 1px solid #ccc;
   border-left: 10px solid #5e1690;
   background: #fff;
   margin-top: 2em;
@@ -68,7 +70,7 @@ ul li {
 
 .kivikoski-says-hello-👋 {
   color: #101010;
-  font: 1em/1.5 "Merriweather", serif;
+  font: 1em/1.5 "Merriweather", Georgia, "Times New Roman", serif;
   margin: 0;
   padding: 1em 1.75em 1em 1em; }
   @media screen and (min-width: 374px) {
@@ -80,10 +82,15 @@ ul li {
   border-bottom: 1px solid #ccc;
   font-family: 'Montserrat', sans-serif;
   font-size: 1.5em;
-  padding-bottom: 0.5em;
-  margin: 0.5em 0 1em; }
+  margin: 0.5em 0 1em;
+  padding-bottom: 0.5em; }
+
+.who-are-you-🐛__introduction {
+  color: #757575;
+  font-weight: 200; }
 
 .who-are-you-🐛__your-name-please {
+  color: #101010;
   font-weight: 600; }
 
 .quick-summary-🎉 {
