add purple border to top of screen

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -69,6 +69,7 @@ ul li {
   max-width: 50em; }
 
 .kivikoski-says-hello-👋 {
+  border-top: 10px solid #8c12e2;
   color: #101010;
   font: 1em/1.5 "Merriweather", Georgia, "Times New Roman", serif;
   margin: 0;
