--- a/assets/sass/sections/header.scss
+++ b/assets/sass/sections/header.scss
@@ -1,4 +1,5 @@
 .kivikoski-says-hello-👋 {
+  border-top: 10px solid $primary-100;
   color: $neutral-900;
   font: 1em/1.5 $font-serif;
   margin: 0;
