add comment to colors.scss clarifying purple for links is AAA compliant

--- a/assets/sass/variables/colors.scss
+++ b/assets/sass/variables/colors.scss
@@ -4,7 +4,7 @@
 // Purples
 $primary-100: #8c12e2; // triangle
 $primary-200: #5e1690; // notification border
-$primary-300: #7e09d0; // links
+$primary-300: #7e09d0; // links - this passes AAA color contrast. 
 
 
 // White, Gray, Black
