--- a/assets/sass/import.scss
+++ b/assets/sass/import.scss
@@ -5,6 +5,8 @@
 @import 'variables/colors.scss';
 @import 'variables/typography.scss';
 
+@import 'sections/footer.scss';
+
 @import 'components/notification.scss';
 
 @import 'sections/header.scss';
