--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -57,6 +57,14 @@ ul li {
   margin: 0 0 1em;
   text-transform: uppercase; }
 
+.footer {
+  background: #5e1690;
+  color: #fff;
+  padding: 1em;
+  margin: -1em; }
+  .footer a, .footer a:link, .footer a:visited {
+    color: #fbfbfb; }
+
 .notification-📬 {
   background: #fdfdfd;
   background: radial-gradient(circle, #fdfdfd 0%, #fbfbfb 100%);
@@ -65,6 +73,11 @@ ul li {
   margin-top: 2em;
   padding: 0.5em 1em;
   max-width: 60em; }
+  @media screen and (min-width: 1200px) {
+    .notification-📬 {
+      width: 1200px;
+      margin-left: auto;
+      margin-right: auto; } }
 
 .notification-📬 p {
   max-width: 50em; }
@@ -79,6 +92,12 @@ ul li {
     .kivikoski-says-hello-👋 {
       font-size: 1.2em;
       padding: 1em; } }
+
+@media screen and (min-width: 1200px) {
+  .who-are-you-🐛 {
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto; } }
 
 .who-are-you-🐛__say-hi {
   border-bottom: 1px solid #ccc;
@@ -141,6 +160,10 @@ ul li {
     grid-column: 2 / 6;
     grid-row: 1; } }
 
+@media screen and (min-width: 1200px) {
+  .quick-summary-🎉__headline {
+    max-width: 900px; } }
+
 @media screen and (min-width: 701px) {
   .quick-summary-🎉__content--first {
     grid-column: 2/6; } }
@@ -180,8 +203,12 @@ ul li {
     grid-row: 2; } }
 
 .work-💻 {
-  max-width: 60em;
   margin-bottom: 4em; }
+  @media screen and (min-width: 1200px) {
+    .work-💻 {
+      width: 1200px;
+      margin-left: auto;
+      margin-right: auto; } }
 
 .work-💻 .headline--major {
   max-width: 46em; }
@@ -203,11 +230,23 @@ ul li {
 .what-mike-likes-👨‍💻__item:not(:last-child)::after {
   content: ', '; }
 
+@media screen and (min-width: 1200px) {
+  .mike-talks-🎤 {
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto; } }
+
 .mike-talks-🎤__talk {
   margin-bottom: 1em; }
 
 .mike-talks-🎤__talk .headline--minor {
   margin-bottom: 0; }
+
+@media screen and (min-width: 1200px) {
+  .articles-✏️ {
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto; } }
 
 .articles-✏️__categories {
   margin-bottom: 2em; }
