--- a/assets/sass/sections/who-are-you.scss
+++ b/assets/sass/sections/who-are-you.scss
@@ -1,5 +1,9 @@
 .who-are-you-🐛 {
-
+  @media screen and (min-width: $screen-giant) {
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
   .who-are-you-🐛__say-hi {
     border-bottom: 1px solid $neutral-400;
@@ -7,7 +11,6 @@
     font-size: 1.5em;
     margin: 0.5em 0 1em;
     padding-bottom: 0.5em;
-
   }
     .who-are-you-🐛__introduction {
       color: $neutral-300;
