--- a/assets/sass/import.scss
+++ b/assets/sass/import.scss
@@ -16,6 +16,8 @@
 @import 'sections/talks.scss';
 @import 'sections/articles.scss';
 
+@import 'case-study/ezcater.scss';
+
 section {
   margin-bottom: 4em;
 }
