tailwind: got tailwind loaded and basic layout implementated

--- a/assets/sass/import.scss
+++ b/assets/sass/import.scss
@@ -1,5 +1,13 @@
 /* Hi folks 👋 */
 
+
+// @import "tailwindcss/base";
+//
+// @import "tailwindcss/components";
+//
+// @import "tailwindcss/utilities";
+
+
 @import 'mixins/media-queries.scss';
 
 @import 'variables/colors.scss';
